--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>Login Details</p>
+   <!-- <p>Login Details</p> -->
+    <div>
+        <input type="textbox" placeholder="E-mail">
+        <br>
+        <input type="password" placeholder="Password">
+        <br>
+        <button>LOGIN</button>
+    </div>
 </body>
 </html>
