--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="body">
    <!-- <p>Login Details</p> -->
-    <div>
+    <div class="d">
         <input type="textbox" placeholder="E-mail">
-        <br>
         <input type="password" placeholder="Password">
-        <br>
-        <button>LOGIN</button>
+        <button class="b">LOGIN</button>
     </div>
 </body>
 </html>
