added new signup file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input type="textbox" placeholder="E-mail">
         <input type="password" placeholder="Password">
         <button class="b">LOGIN</button>
+        <h5 class="sign">If not a user, <a href="/signup.html">signup</a></h5>
     </div>
 </body>
 </html>
